Ditch Traefik for Istio ingress gateway

--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - resources/peerauthentication.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
+  - resources/referencegrant.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
 
