--- a/apps/media-server/base/kustomization.yaml
+++ b/apps/media-server/base/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - resources/peerauthentication.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
+  - resources/referencegrant.yaml
   - resources/service.yaml
