--- a/apps/vaultwarden/overlays/tombstone/kustomization.yaml
+++ b/apps/vaultwarden/overlays/tombstone/kustomization.yaml
@@ -40,17 +40,13 @@ patches:
     target:
       kind: Deployment
   - patch: |-
-      - op: add
+      - op: replace
         path: /spec/dnsNames
         value:
           - passwords.home.arpa
     target:
       kind: Certificate
   - patch: |-
-      - op: add
-        path: /metadata/annotations
-        value:
-          traefik.ingress.kubernetes.io/router.middlewares: traefik-ip-allowlist-internal@kubernetescrd
       - op: add
         path: /spec/hostnames
         value:
