--- a/infrastructure/configs/flux-webhook/kustomization.yaml
+++ b/infrastructure/configs/flux-webhook/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - resources/certificate.yaml
   - resources/httproute.yaml
   - resources/networkpolicy.yaml
+  - resources/referencegrant.yaml
