--- a/apps/immich/base/kustomization.yaml
+++ b/apps/immich/base/kustomization.yaml
@@ -5,10 +5,12 @@ kind: Kustomization
 namespace: immich
 
 resources:
+  - resources/certificate.yaml
   - resources/deployment.yaml
   - resources/httproute.yaml
   - resources/namespace.yaml
   - resources/peerauthentication.yaml
   - resources/persistentvolumeclaim.yaml
+  - resources/referencegrant.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
