--- a/apps/immich/base/resources/certificate.yaml
+++ b/apps/immich/base/resources/certificate.yaml
@@ -2,13 +2,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: vaultwarden
+  name: immich
 spec:
   dnsNames:
-    - vaultwarden.example.com
+    - immich.example.com
   duration: 168h
   issuerRef:
     kind: ClusterIssuer
     name: ownca
   renewBefore: 8h
-  secretName: vaultwarden-tls
+  secretName: immich-tls
