--- a/apps/immich/base/resources/httproute.yaml
+++ b/apps/immich/base/resources/httproute.yaml
@@ -6,10 +6,25 @@ metadata:
 spec:
   parentRefs:
     - kind: Gateway
-      name: traefik
-      namespace: traefik
-      sectionName: websecure
+      name: ingress
+      namespace: istio-gateways
   rules:
     - backendRefs:
         - name: immich-server
           port: 2283
+      filters:
+        - responseHeaderModifier:
+            set:
+              - name: Permissions-Policy
+                value: geolocation=(), microphone=(), camera=()
+              - name: Referrer-Policy
+                value: strict-origin-when-cross-origin
+              - name: X-Content-Type-Options
+                value: nosniff
+              - name: X-Frame-Options
+                value: DENY
+              - name: X-Robots-Tag
+                value: noindex, nofollow
+              - name: X-XSS-Protection
+                value: 1; mode=block
+          type: ResponseHeaderModifier
