--- a/apps/immich/overlays/tombstone/kustomization.yaml
+++ b/apps/immich/overlays/tombstone/kustomization.yaml
@@ -8,9 +8,13 @@ resources:
 
 patches:
   - patch: |-
-      - op: add
-        path: /metadata/annotations/traefik.ingress.kubernetes.io~1router.middlewares
-        value: traefik-ip-allowlist-internal@kubernetescrd
+      - op: replace
+        path: /spec/dnsNames
+        value:
+          - immich.home.arpa
+    target:
+      kind: Certificate
+  - patch: |-
       - op: add
         path: /spec/hostnames
         value:
