--- a/apps/redirector/base/kustomization.yaml
+++ b/apps/redirector/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - resources/httproute.yaml
   - resources/namespace.yaml
   - resources/peerauthentication.yaml
+  - resources/referencegrant.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
 
