--- a/infrastructure/configs/istio-ingress/base/kustomization.yaml
+++ b/infrastructure/configs/istio-ingress/base/kustomization.yaml
@@ -2,9 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: traefik
+namespace: istio-gateways
 
 resources:
   - resources/gateway.yaml
-  - resources/httproute-redirect.yaml
-  - resources/middleware.yaml
+  - resources/httproute.yaml
