--- a/infrastructure/configs/istio-ingress/base/resources/httproute.yaml
+++ b/infrastructure/configs/istio-ingress/base/resources/httproute.yaml
@@ -2,20 +2,18 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  labels:
-    app.kubernetes.io/instance: gitea
-    app.kubernetes.io/name: gitea
-  name: gitea
+  name: https-redirect
 spec:
   parentRefs:
     - kind: Gateway
       name: ingress
-      namespace: istio-gateways
+      sectionName: http
   rules:
-    - backendRefs:
-        - name: gitea-http
-          port: 3000
-      filters:
+    - filters:
+        - requestRedirect:
+            scheme: https
+            statusCode: 301
+          type: RequestRedirect
         - responseHeaderModifier:
             set:
               - name: Permissions-Policy
