--- a/apps/vaultwarden/base/resources/networkpolicy.yaml
+++ b/apps/vaultwarden/base/resources/networkpolicy.yaml
@@ -11,7 +11,10 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: traefik
+              kubernetes.io/metadata.name: istio-gateways
+          podSelector:
+            matchLabels:
+              app.kubernetes.io/name: ingress
   podSelector:
     matchLabels:
       app.kubernetes.io/name: vaultwarden
