Istio-to-Traefik migration

--- a/apps/gitea/overlays/tombstone/kustomization.yaml
+++ b/apps/gitea/overlays/tombstone/kustomization.yaml
@@ -48,9 +48,9 @@ patches:
     target:
       kind: Certificate
   - patch: |-
-      - op: add
-        path: /spec/hostnames
-        value:
-          - git.home.arpa
+      - op: replace
+        path: /spec/routes/0/match
+        value: "Host(`git.home.arpa`)"
     target:
-      kind: HTTPRoute
+      kind: IngressRoute
+      name: gitea
