--- a/apps/vaultwarden/overlays/tombstone/kustomization.yaml
+++ b/apps/vaultwarden/overlays/tombstone/kustomization.yaml
@@ -47,9 +47,9 @@ patches:
     target:
       kind: Certificate
   - patch: |-
-      - op: add
-        path: /spec/hostnames
-        value:
-          - passwords.home.arpa
+      - op: replace
+        path: /spec/routes/0/match
+        value: "Host(`passwords.home.arpa`)"
     target:
-      kind: HTTPRoute
+      kind: IngressRoute
+      name: vaultwarden
