--- a/infrastructure/configs/flux-webhook/kustomization.yaml
+++ b/infrastructure/configs/flux-webhook/kustomization.yaml
@@ -6,6 +6,5 @@ namespace: flux-system
 
 resources:
   - resources/certificate.yaml
-  - resources/httproute.yaml
+  - resources/ingressroute.yaml
   - resources/networkpolicy.yaml
-  - resources/referencegrant.yaml
