--- a/apps/gitea/base/resources/networkpolicy.yaml
+++ b/apps/gitea/base/resources/networkpolicy.yaml
@@ -9,6 +9,9 @@ spec:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: traefik
+          podSelector:
+            matchLabels:
+              app.kubernetes.io/name: traefik
   podSelector:
     matchLabels:
       app.kubernetes.io/name: gitea
