--- a/apps/vaultwarden/base/resources/networkpolicy.yaml
+++ b/apps/vaultwarden/base/resources/networkpolicy.yaml
@@ -11,10 +11,10 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: istio-gateways
+              kubernetes.io/metadata.name: traefik
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress
+              app.kubernetes.io/name: traefik
   podSelector:
     matchLabels:
       app.kubernetes.io/name: vaultwarden
