--- a/clusters/tombstone/infrastructure.yaml
+++ b/clusters/tombstone/infrastructure.yaml
@@ -23,7 +23,6 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager
-    - name: istio-ingress-config
   interval: 10m
   path: ./infrastructure/configs/cert-manager
   prune: true
@@ -42,7 +41,7 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager-config
-    - name: istio-ingress-config
+    - name: traefik-config
   interval: 10m
   path: ./infrastructure/configs/flux-webhook
   prune: true
@@ -96,43 +95,6 @@ spec:
     - name: helm-repositories
   interval: 10m
   path: ./infrastructure/controllers/istio/overlays/tombstone
-  prune: true
-  retryInterval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  timeout: 10m
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: istio-ingress
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: istio
-    - name: metallb-config
-  interval: 10m
-  path: ./infrastructure/controllers/istio-ingress/overlays/tombstone
-  prune: true
-  retryInterval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  timeout: 10m
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: istio-ingress-config
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: istio-ingress
-  interval: 10m
-  path: ./infrastructure/configs/istio-ingress/overlays/tombstone
   prune: true
   retryInterval: 1m
   sourceRef:
@@ -221,6 +183,43 @@ metadata:
 spec:
   interval: 10m
   path: ./infrastructure/configs/sops-secrets-operator-crds/overlays/tombstone
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 10m
+  wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: traefik
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: helm-repositories
+    - name: metallb-config
+  interval: 10m
+  path: ./infrastructure/controllers/traefik/overlays/tombstone
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 10m
+  wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: traefik-config
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: traefik
+  interval: 10m
+  path: ./infrastructure/configs/traefik/overlays/tombstone
   prune: true
   retryInterval: 1m
   sourceRef:
