--- a/clusters/tombstone/infrastructure.yaml
+++ b/clusters/tombstone/infrastructure.yaml
@@ -23,6 +23,7 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager
+    - name: traefik-config
   interval: 10m
   path: ./infrastructure/configs/cert-manager
   prune: true
