--- a/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
+++ b/infrastructure/configs/cert-manager/resources/clusterissuer.yaml
@@ -18,7 +18,7 @@ spec:
             parentRefs:
               - kind: Gateway
                 name: ingress
-                namespace: istio-gateways
+                namespace: traefik
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -39,7 +39,7 @@ spec:
             parentRefs:
               - kind: Gateway
                 name: ingress
-                namespace: istio-gateways
+                namespace: traefik
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
