--- a/apps/redirector/base/configs/nginx.conf
+++ b/apps/redirector/base/configs/nginx.conf
@@ -1,9 +1,34 @@
+load_module modules/ngx_http_js_module.so;
+
+pid /tmp/nginx.pid;
+
 events {
   worker_connections 768;
 }
 
 http {
   access_log off;
+
+  client_body_temp_path /tmp/client_temp;
+  fastcgi_temp_path /tmp/fastcgi_temp;
+  js_import redirect from /etc/nginx/redirect.js;
+  proxy_temp_path /tmp/proxy_temp;
+  scgi_temp_path /tmp/scgi_temp;
+  uwsgi_temp_path /tmp/uwsgi_temp;
+
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
+
+  server {
+    listen 8080;
+    server_name go.skimresources.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+
+    location / {
+      js_content redirect.skimresources;
+    }
+  }
 
   server {
     listen 8080;
