--- a/apps/redirector/base/kustomization.yaml
+++ b/apps/redirector/base/kustomization.yaml
@@ -11,9 +11,9 @@ resources:
   - resources/namespace.yaml
   - resources/peerauthentication.yaml
   - resources/service.yaml
-  - resources/sopssecret.yaml
 
 configMapGenerator:
   - files:
       - configs/nginx.conf
+      - configs/redirect.js
     name: redirector-nginx
