--- a/apps/redirector/base/resources/ingressroute.yaml
+++ b/apps/redirector/base/resources/ingressroute.yaml
@@ -2,6 +2,27 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
+  name: redirector-skimresources
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`go.skimresources.com`)
+      middlewares:
+        - name: ip-allowlist
+          namespace: traefik
+        - name: security-headers
+          namespace: traefik
+      services:
+        - name: redirector
+          port: 80
+  tls:
+    secretName: go-skimresources-com-tls
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
   name: redirector-instagram
 spec:
   entryPoints:
