Make internal Services IP4-only

--- a/apps/gitea/base/resources/service.yaml
+++ b/apps/gitea/base/resources/service.yaml
@@ -7,7 +7,9 @@ metadata:
     app.kubernetes.io/name: gitea
   name: gitea-http
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 3000
