--- a/apps/media-server/base/resources/service.yaml
+++ b/apps/media-server/base/resources/service.yaml
@@ -8,7 +8,9 @@ metadata:
     app.kubernetes.io/name: lidarr
   name: lidarr
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 8686
@@ -27,7 +29,9 @@ metadata:
     app.kubernetes.io/name: nzbget
   name: nzbget
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 6789
@@ -46,7 +50,9 @@ metadata:
     app.kubernetes.io/name: ombi
   name: ombi
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 5000
@@ -65,7 +71,9 @@ metadata:
     app.kubernetes.io/name: prowlarr
   name: prowlarr
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 9696
@@ -84,7 +92,9 @@ metadata:
     app.kubernetes.io/name: radarr
   name: radarr
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 7878
@@ -103,7 +113,9 @@ metadata:
     app.kubernetes.io/name: sonarr
   name: sonarr
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 8989
