--- a/apps/redirector/base/resources/service.yaml
+++ b/apps/redirector/base/resources/service.yaml
@@ -4,7 +4,9 @@ kind: Service
 metadata:
   name: redirector
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 80
