--- a/apps/vaultwarden/base/resources/service.yaml
+++ b/apps/vaultwarden/base/resources/service.yaml
@@ -8,7 +8,9 @@ metadata:
     app.kubernetes.io/name: vaultwarden
   name: vaultwarden
 spec:
-  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: http
       port: 80
