--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
+  - resources/sopssecret.yaml
 
 configMapGenerator:
   - envs:
