--- a/apps/redirector/base/configs/nginx.conf
+++ b/apps/redirector/base/configs/nginx.conf
@@ -26,7 +26,7 @@ http {
     add_header Referrer-Policy "no-referrer" always;
 
     location / {
-      js_content redirect.skimresources;
+      js_content redirect.redirectToUrlParameter;
     }
   }
 
