--- a/apps/redirector/base/kustomization.yaml
+++ b/apps/redirector/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - resources/namespace.yaml
   - resources/peerauthentication.yaml
   - resources/service.yaml
+  - resources/sopssecret.yaml
 
 configMapGenerator:
   - files:
