--- a/apps/redirector/base/resources/deployment.yaml
+++ b/apps/redirector/base/resources/deployment.yaml
@@ -23,24 +23,30 @@ spec:
         app: redirector
     spec:
       containers:
-        - image: ghcr.io/nosborn/nginx:1.28.2
+        - image: docker.io/nginxinc/nginx-unprivileged:1.29.5-alpine
           name: nginx
           ports:
             - containerPort: 8080
               name: http
               protocol: TCP
           livenessProbe:
+            failureThreshold: 3
             httpGet:
               path: /healthz
               port: http
-              # initialDelaySeconds: 5
-              # periodSeconds: 10
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           readinessProbe:
+            failureThreshold: 3
             httpGet:
               path: /healthz
               port: http
-              # initialDelaySeconds: 5
-              # periodSeconds: 5
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           resources: {}
           securityContext:
             allowPrivilegeEscalation: false
@@ -58,6 +64,8 @@ spec:
               subPath: redirect.js
             - mountPath: /tmp
               name: tmp
+      imagePullSecrets:
+        - name: docker-hub
       securityContext:
         seccompProfile:
           type: RuntimeDefault
