Update network policies

--- a/apps/gitea/base/resources/networkpolicy.yaml
+++ b/apps/gitea/base/resources/networkpolicy.yaml
@@ -25,9 +25,9 @@ metadata:
 spec:
   ingress:
     - from:
-        - podSelector:
+        - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: gitea
+              kubernetes.io/metadata.name: gitea
   podSelector:
     matchLabels:
       app.kubernetes.io/name: gitea-valkey
