--- a/apps/immich/base/kustomization.yaml
+++ b/apps/immich/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - resources/ingressroute.yaml
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
+  - resources/persistentvolume.yaml
   - resources/peerauthentication.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
