--- a/apps/immich/base/resources/deployment.yaml
+++ b/apps/immich/base/resources/deployment.yaml
@@ -78,6 +78,8 @@ spec:
           volumeMounts:
             - mountPath: /cache
               name: cache
+            - mountPath: /tmp
+              name: tmp
       dnsPolicy: ClusterFirst
       enableServiceLinks: false
       hostIPC: false
@@ -90,6 +92,8 @@ spec:
       volumes:
         - emptyDir: {}
           name: cache
+        - emptyDir: {}
+          name: tmp
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -122,7 +126,7 @@ spec:
             - name: DB_DATABASE_NAME
               value: immich
             - name: DB_HOSTNAME
-              value: immich-database-rw
+              value: immich-postgres
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -227,7 +231,7 @@ spec:
                   name: immich-postgres
             - name: POSTGRES_USER
               value: immich
-          image: docker.io/library/postgres:18.1
+          image: docker.io/pgvector/pgvector:0.8.1-pg18
           livenessProbe:
             exec:
               command:
